--- a/react/myreactdev/package.json
+++ b/react/myreactdev/package.json
@@ -10,19 +10,21 @@
     "@mui/x-data-grid": "^7.23.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/user-event": "^14.6.0",
     "axios": "^1.7.8",
     "chart.js": "^4.4.7",
     "file-saver": "^2.0.5",
+    "firebase": "^11.2.0",
     "jwt-decode": "^4.0.0",
     "match-sorter": "^8.0.0",
     "qrcode.react": "^4.1.0",
-    "react": "^19.0.0",
+    "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.2.0",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^7.0.1",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.15.0",
     "react-table": "^7.8.0",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
