--- a/react/myreactdev/package.json
+++ b/react/myreactdev/package.json
@@ -18,15 +18,19 @@
     "firebase": "^11.2.0",
     "jwt-decode": "^4.0.0",
     "match-sorter": "^8.0.0",
+    "moment-jalaali": "^0.10.4",
+    "moment-timezone": "^0.5.47",
     "qrcode.react": "^4.1.0",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
+    "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
     "react-scripts": "^5.0.1",
+    "react-sparklines": "^1.7.0",
     "react-spinners": "^0.15.0",
     "react-table": "^7.8.0",
     "react-window": "^1.8.11",
