--- a/react/myreactdev/jsconfig.json
+++ b/react/myreactdev/jsconfig.json
@@ -22,6 +22,7 @@
       "pages/Profile/*": ["pages/Profile/*"],
       "pages/Transactions/*": ["pages/Transactions/*"],
       "pages/Withdrawals/*": ["pages/Withdrawals/*"],
+      "pages/Equality system/*": ["pages/EqualitySystem/*"],
       "services/*": ["services/*"],
       "utils/*": ["utils/*"],
       "themes/*": ["themes/*"]
