--- a/react/myreactdev/package.json
+++ b/react/myreactdev/package.json
@@ -24,7 +24,9 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-chartjs-2": "^5.2.0",
+    "react-circular-progressbar": "^2.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.3.8",
     "react-gauge-chart": "^0.5.1",
     "react-icons": "^5.3.0",
     "react-resizable": "^3.0.5",
